--- a/kernel/BUILD.gn
+++ b/kernel/BUILD.gn
@@ -62,6 +62,7 @@ executable("kernel") {
         "arch/x86_64/apic.c",
         "arch/x86_64/ints.S",
         "arch/x86_64/time.c",
+        "memory/balloc.c",
     ]
 
     include_dirs = [
