local apic and io apic

--- a/kernel/BUILD.gn
+++ b/kernel/BUILD.gn
@@ -58,9 +58,10 @@ executable("kernel") {
         "arch/x86_64/entry.S",
         "arch/x86_64/tty.c",
         "arch/x86_64/interrupt.c",
-        "arch/x86_64/apic.c",
         "arch/x86_64/ints.S",
         "arch/x86_64/time.c",
+        "apic/local_apic.c",
+        "apic/io_apic.c",
         "memory/balloc.c",
         "memory/paging.c",
         "memory/buddy.c",
