--- a/kernel/BUILD.gn
+++ b/kernel/BUILD.gn
@@ -72,6 +72,7 @@ executable("kernel") {
         "cpu/acpi.c",
         "cpu/cpuid.S",
         "cpu/cpu_detect.c",
+        "pci/pci.c",
     ]
 
     include_dirs = [
