--- a/kernel/BUILD.gn
+++ b/kernel/BUILD.gn
@@ -66,6 +66,7 @@ executable("kernel") {
         "memory/paging.c",
         "memory/buddy.c",
         "memory/slab.c",
+        "memory/mm.c",
         "thread/thread.c",
         "thread/switch.S",
         "thread/lock.c",
