--- a/kernel/meson.build
+++ b/kernel/meson.build
@@ -3,6 +3,7 @@ kernel_headers = [
     'include/moon/hal.hpp',
     'include/moon/memory.h',
     'include/moon/tty.hpp',
+    'include/moon/idt.hpp',
     'include/multiboot/multiboot.h',
 ]
 
@@ -10,6 +11,7 @@ kernel_src = [
     'src/arch/x86_64/entry.S',
     'src/main.cc',
     'src/tty.cc',
+    'src/idt.cc',
 ]
 
 srcs = [kernel_src, kernel_headers ]
