some project config

--- a/meson.build
+++ b/meson.build
@@ -3,4 +3,5 @@ project('moon-os', 'c', 'cpp')
 add_project_arguments('-DDEBUG', language : ['c', 'cpp'])
 
 subdir('klibc')
+subdir('algorithm')
 subdir('kernel')
