--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,32 @@
     "ccls.misc.compilationDatabaseDirectory": "${workspaceFolder}/out/Debug",
     "ccls.highlight.function.face": ["enabled"],
     "ccls.highlight.type.face": ["enabled"],
-    "ccls.highlight.variable.face": ["enabled"]
+    "ccls.highlight.variable.face": ["enabled"],
+    "psi-header.config": {
+        "license": "MIT",
+        "forceToTop": true,
+        "author": "tangruiwen",
+        "authorEmail": "tangruiwen1989@gmail.com"
+    },
+    "psi-header.lang-config": [
+        {
+            "language": "*",
+            "lineLength": 80,
+            "suffix": "*",
+            "begin": "/*******************************************************************************",
+            "end": " ******************************************************************************/"
+        }
+    ],
+    "psi-header.templates": [
+        {
+            "language": "*",
+            "template": [
+                "Project: moon-os",
+                "File Created: <<filecreated('dddd, Do MMMM YYYY h:mm:ss a')>>",
+                "Author: <<author>> (<<authoremail>>)",
+                "Copyright - <<year>> <<copyrightholder>>"
+            ]
+        }
+    ]
+    
 }
