--- a/kernel/meson.build
+++ b/kernel/meson.build
@@ -1,32 +1,36 @@
 
 umm_malloc = subproject('umm_malloc').get_variable('umm_malloc_dep')
 
+lai_dep = subproject('lai').get_variable('dependency')
+
 kernel_headers = [
+    'include/moon/acpi.hpp',
     'include/moon/hal.hpp',
-    'include/moon/memory.h',
-    'include/moon/tty.hpp',
     'include/moon/idt.hpp',
     'include/moon/io.hpp',
+    'include/moon/memory.h',
     'include/moon/paging.hpp',
     'include/moon/timer.hpp',
+    'include/moon/tty.hpp',
     'include/multiboot/multiboot.h',
 ]
 
 kernel_src = [
+    'src/acpi.cc',
     'src/arch/x86_64/entry.S',
     'src/arch/x86_64/idt.S',
-    'src/main.cc',
-    'src/tty.cc',
+    'src/balloc/balloc.cc',
+    'src/balloc/balloc.hpp',
+    'src/hal.cc',
     'src/idt.cc',
     'src/io.cc',
-    'src/hal.cc',
+    'src/kprintf.cc',
+    'src/kprintf.hpp',
+    'src/main.cc',
     'src/paging.cc',
     'src/runtime.cc',
     'src/timer.cc',
-    'src/kprintf.hpp',
-    'src/kprintf.cc',
-    'src/balloc/balloc.hpp',
-    'src/balloc/balloc.cc',
+    'src/tty.cc',
 ]
 
 srcs = [kernel_src, kernel_headers ]
@@ -72,7 +76,7 @@ executable('kernel.bin', sources: srcs,
     link_args: kernel_link_args,
     c_args: kernel_c_args,
     cpp_args: [kernel_c_args, kernel_cpp_args],
-    dependencies: [klibc_dep, algorithm, umm_malloc]
+    dependencies: [klibc_dep, algorithm, umm_malloc, lai_dep]
     )
 
 if get_option('build_test')
